# Improving-of-list-decodable-PIR-scheme

./: CMakeLists.txt
2007_improving/: CMakeLists.txt
2007_improving/include/: 2007_improving.hpp
2007_improving/src/: 2007_improving.cpp
20xx_ours/: CMakeLists.txt
20xx_ours/include/: answer.hpp  global.hpp  main.hpp  pch.hpp  query.hpp  reconstruct.hpp
20xx_ours/src/: answer.cpp  global.cpp  main.cpp  query.cpp  reconstruct.cpp
